# MAI-OOP-Labs

./: .gitignore  CMakeLists.txt  README.md
.devcontainer/: devcontainer.json
Labs/L1-First_CPP_Program/: CMakeLists.txt  README.md
Labs/L1-First_CPP_Program/src/: main.cpp
Labs/L1-First_CPP_Program/src/headers/: counter.h
Labs/L1-First_CPP_Program/src/program/: counter.cpp
Labs/L1-First_CPP_Program/tests/: tests.cpp
Labs/L2-Classes/: CMakeLists.txt  README.md
Labs/L2-Classes/src/: main.cpp
Labs/L2-Classes/src/include/: decimal.h
Labs/L2-Classes/src/program/: decimal.cpp
Labs/L2-Classes/tests/: tests.cpp
Labs/L3-Inheritance/: CMakeLists.txt  README.md
Labs/L3-Inheritance/src/include/: array.h  utils.h
Labs/L3-Inheritance/src/include/figures/: figure.h  hexagon.h  octagon.h  pentagon.h  rectangle.h  square.h  triangle.h
Labs/L3-Inheritance/src/program/: array.cpp  main.cpp  utils.cpp
Labs/L3-Inheritance/src/program/figures/: hexagon.cpp  octagon.cpp  pentagon.cpp  rectangle.cpp  square.cpp  triangle.cpp
Labs/L3-Inheritance/tests/: tests.cpp
Labs/L4-Basics_of_metaprogramming/: CMakeLists.txt
Labs/L4-Basics_of_metaprogramming/src/include/: array.h  checker.h  point.h  utils.h
Labs/L4-Basics_of_metaprogramming/src/include/figures/: figure.h  hexagon.h  octagon.h  pentagon.h
Labs/L4-Basics_of_metaprogramming/src/program/: main.cpp  utils.cpp
Labs/L4-Basics_of_metaprogramming/tests/: tests.cpp
Labs/L5-Iterators_and_allocators/: CMakeLists.txt
Labs/L5-Iterators_and_allocators/src/: main.cpp
Labs/L5-Iterators_and_allocators/src/include/: memory_container.h
Labs/L5-Iterators_and_allocators/src/program/: memory_container.cpp
Labs/L5-Iterators_and_allocators/tests/: tests.cpp
Labs/L6-Design_patterns/: CMakeLists.txt
Labs/L6-Design_patterns/src/: factory.cpp  main.cpp  npc.cpp  utils.cpp  visitor.cpp
Labs/L6-Design_patterns/src/include/: factory.h  game.h  npc.h  observer.h  utils.h
Labs/L6-Design_patterns/tests/: tests.cpp
Labs/L7-Async_programming/: CMakeLists.txt
Labs/L7-Async_programming/src/: game.cpp  main.cpp  threadManager.cpp  utils.cpp  visitor.cpp
Labs/L7-Async_programming/src/include/: game.h  npc.h  observer.h  threadManager.h  visitor.h
Labs/L7-Async_programming/tests/: tests.cpp
